--- a/Manifests/deployment.yaml
+++ b/Manifests/deployment.yaml
@@ -3,21 +3,21 @@ kind: Deployment
 metadata:
   name: flask-app
   labels:
-    app: flask-app
+    appname: flask-app
     component: greeting
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: flask-app
-      app.kubernetes.io/component: greeting
+      appname: flask-app
+      component: greeting
   template:
     metadata:
       labels:
-        app: flask-app
+        appname: flask-app
         component: greeting
     spec:
       containers:
-      - name: flask-app
-        image: clo835_flask_app
+      - name: flask-webserver
+        image: 844099387134.dkr.ecr.us-east-1.amazonaws.com/flask-webserver:v0.1
         ports:
         - containerPort: 5000
