--- a/Manifests/serviceNodePort.yaml
+++ b/Manifests/serviceNodePort.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-app
+  name: flask-app-np
   labels:
-    app: flask-app
+    appname: flask-app
     component: greeting
 spec:
   type: NodePort
   ports:
   - port: 80
     targetPort: 5000
-    nodePort: 30010
+    nodePort: 30000
   selector:
     app: flask-app
     component: greeting
